Fix overflow for property filter editor dropdown

--- a/src/property-filter/styles.scss
+++ b/src/property-filter/styles.scss
@@ -79,6 +79,10 @@
   overflow-y: auto;
 }
 
+.custom-content-wrapper {
+  display: contents;
+}
+
 .custom-control {
   margin-right: awsui.$space-s;
 }
